--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@ layout: home
 	  <div class="avatar">
 		<img class="img-circle" src="{{ site.baseurl }}static/img/{{ site.avatar }}" alt="Responsive image">
 	  </div>
-	  <h3>I'm <strong>{{ site.author }}</strong>, a Software Engineer.</h3>
-	  <h3>I love all things computer science and maths.</h3>
-	  <h3>Have a look at some of my working <a href="{{ site.baseurl }}projects.html"> projects</a>.</h3>
-	  <h3>For more check out my academic &amp; professional <a href="http://jekyller.github.io/vitae">Resume</a>.</h3>
-	  <h3>Contact me at <a href="http://twitter.com/{{ site.twitter }}">@{{ site.twitter }}</a> or by <a href="mailto:{{ site.email }}">email</a>.</h3>
+	  <h3>I'm <strong>{{ site.author }}</strong>. I am currently a member of the <a href="https://prl-prg.github.io/index.html">prl-prg</a> lab as a post-doctoral researcher. 
+			In Prague I am mainly working on speculative techniques for optimizing the R programming language.</h3>
+		<h3>My main research interest aims at making programming languages more flexible to help unleash developers creativity. 
+			I am also interested in ensuring that applications in these PLs do not suffer from performance overheads due to their increased flexibility. 
+			Besides, I am interested in providing mechanism to help developers to enforce these PLs behaves correctly.<h3>
+		<h3>I am a former member of the <a href="http://lafhis.dc.uba.ar/en">LaFHIS</a> lab in Argentina. 
+		My PhD. was mainly about reflective virtual machines. 
+		<a href="http://lafhis.dc.uba.ar/en/~diegog">Diego Garbervetsky</a> was my advisor 
+		and <a href="http://stefan-marr.de/research/">Stefan Marr</a> collaborated a lot in the whole process.</h3>
+		<h3>I also closely collaborated with the <a href="https://rmod.inria.fr">RMoD</a> team from INRIA, Lille, France. 
+		
+		Finally, I did some work also with Operating Systems. My master thesis was a contribution to the SqueakNOS project and I'm still involved on it.</h3>
 	  {% include social.html %}
 	</div>
 </section>
