--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ layout: home
 			<img class="img-circle" src="{{ site.baseurl }}static/img/{{ site.avatar }}" alt="Responsive image">
 	  </div>
 	  <h3>I'm <strong>{{ site.author }}</strong>. I am currently a member of the <a href="https://prl-prg.github.io/index.html">prl-prg</a> lab as a post-doctoral researcher. 
-			In Prague I am mainly working on a compiler for optimizing the R programming language.</h3>
-		To do so, we are exploring a combination of static analysis and speculative techniques. 
+			In Prague I am mainly working on a compiler for optimizing the R programming language.
+		To do so, we are exploring a combination of static analysis and speculative techniques.</h3> 
 		<h3>My main research interest aims at making programming languages more flexible to help unleash developers creativity. 
 			I am also interested in ensuring that applications in these programming languages do not suffer from performance overheads due to their increased flexibility. 
 			Besides, I am interested in providing mechanism to help developers to enforce these PLs behaves correctly.<h3>
