--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: home
 		To do so, we are exploring a combination of static analysis and speculative techniques.</h3> 
 		<h3>My main research interest aims at making programming languages more flexible to help unleash developers creativity. 
 			I am also interested in ensuring that applications in these programming languages do not suffer from performance overheads due to their increased flexibility. 
-			Besides, I am interested in providing mechanism to help developers to enforce these PLs behaves correctly.<h3>
+			Moreover, I am interested in providing mechanism to help developers to enforce that applications written in these languages behaves correctly.<h3>
 		<h3>
 			I am a former member of the <a href="http://lafhis.dc.uba.ar/en">LaFHIS</a> lab in Argentina. 
 			My PhD. was mainly about reflective virtual machines. 
