--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@ layout: home
 			I am a former member of the <a href="http://lafhis.dc.uba.ar/en">LaFHIS</a> lab in Argentina. 
 			My PhD. was mainly about reflective virtual machines. 
 			<a href="http://lafhis.dc.uba.ar/en/~diegog">Diego Garbervetsky</a> was my advisor 
-			and <a href="http://stefan-marr.de/research/">Stefan Marr</a> collaborated a lot in the whole process.
+			and <a href="http://stefan-marr.de/research/">Stefan Marr</a> collaborated in the whole process.
 			I also closely collaborated with the <a href="https://rmod.inria.fr">RMoD</a> team from INRIA, Lille, France. 
 		</h3>
 		<h3>
-			Finally, I did some work also with Operating Systems. My master thesis was a contribution to the SqueakNOS project and I'm still involved on it.
+			Finally, I also did some work around Operating Systems. My master thesis was a contribution to the SqueakNOS project and I'm still involved on it.
 		</h3>
 	  {% include social.html %}
 	</div>
